@@ -15,7 +15,7 @@
 dput(x, file = "",
      control = c("keepNA", "keepInteger", "showAttributes"))
 
-dget(file)
+dget(file, keep.source = FALSE)
 }
 \arguments{
   \item{x}{an object.}
@@ -23,6 +23,8 @@ dget(file)
     \link{connection}. \code{""} indicates output to the console.}
   \item{control}{character vector indicating deparsing options.
     See \code{\link{.deparseOpts}} for their description.}
+  \item{keep.source}{logical: should the source formatting be retained when
+    parsing functions, if possible?}
 }
 \details{
   \code{dput} opens \code{file} and deparses the object \code{x} into
@@ -41,11 +43,11 @@ dget(file)
   \code{dput} will warn if fewer characters were written to a file than
   expected, which may indicate a full or corrupt file system.
 
-  To display saved source rather than deparsing the internal representation
-  include \code{"useSource"} in \code{control}.  \R currently saves
-  source only for function definitions.  If you do not care about source
-  representation (e.g. for a data object) set \code{options(keep.source
-    = FALSE}) before calling \code{dget}. 
+  To display saved source rather than deparsing the internal
+  representation include \code{"useSource"} in \code{control}.  \R
+  currently saves source only for function definitions.  If you do not
+  care about source representation (e.g. for a data object), for speed
+  set \code{options(keep.source = FALSE}) when calling \code{source}.
 }
 \value{
   For \code{dput}, the first argument invisibly.
